fix-template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >
  Sample CloudFormation template with intentional errors
  for students to troubleshoot EC2 provisioning.

Parameters:
  EnvironmentName:
    Type: String
    Default: dev
    AllowedValues:
      - dev
      - prod
    Description: The environment name (dev or prod).

  InstanceType:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
    Description: EC2 instance type.

  AMIId:
    Type: AWS::EC2::Image::Id
    Default: "ami-0f3c8a41d58224188"
    Description: The AMI ID to use.

  VpcId:
    Type: String
    Description: Enter your VPC ID
    Default: "vpc-04be16fe752e33982"

  keypair:
    Type: String
    Description: Enter your keypair
    Default: "awscadec2kp"

Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !Ref AMIId
      "KeyName": !Ref keypair
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: 0
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-instance"

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH access
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

Outputs:
  InstanceId:
    Description: The ID of the EC2 instance
    Value: !Ref EC2Instance

  PublicIP:
    Description: The public IP address of the EC2 instance
    Value: !GetAtt EC2Instance.PublicIp
